--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                         <div class="c_img">
                             <img class="rounded-1" src="https://i.ibb.co/zQstw0Y/blog-grid2.jpg">
                             <div class="c_img_figurer">
-                                <a href="#" class="btn btn-primary c_img_button"> <span><img src="https://i.ibb.co/72JLGKM/author.jpg" alt=""></span> BY MIT MORTON</a>
+                                <a href="#" class="btn btn-primary c_img_button"> <span><img src="https://i.ibb.co/72JLGKM/author.jpg" alt=""></span> BY TIM NORTON</a>
                             </div>
                         </div>
                         <div class="c_body">
@@ -420,7 +420,7 @@
                         <div class="c_img ">
                             <img class="rounded-1" src="https://i.ibb.co/F5KmsdB/blog-grid3.jpg">
                             <div class="c_img_figurer">
-                                <a href="#" class="btn btn-primary c_img_button"> <span><img src="https://i.ibb.co/72JLGKM/author.jpg" alt=""></span> BY MIT MORTON</a>
+                                <a href="#" class="btn btn-primary c_img_button"> <span><img src="https://i.ibb.co/72JLGKM/author.jpg" alt=""></span> BY TIM NORTON</a>
                             </div>
                         </div>
                         <div class="c_body">
