--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 
     </main>
     
-   <footer>
+  <footer>
         <!-- Start Footer Section -->
         <section class="footer_section pt-5 mt-5">
             <div class="footer_top py-5">
@@ -463,7 +463,7 @@
 
                         <div class="col-lg-3">
                             <div class="footer_wizet_right">
-                                <h3>Pages</h3>
+                                <h3><a href="#">Pages</a></h3>
                                 <ul>
                                     <li><a href="#">About Us</a></li>
                                     <li><a href="#">Our Services</a></li>
@@ -475,7 +475,7 @@
 
                         <div class="col-lg-3">
                             <div class="footer_wizet_right">
-                                <h3>More Link</h3>
+                                <h3><a href="#">More Link</a></h3>
                                 <ul>
                                     <li><a href="#">Topics</a></li>
                                     <li><a href="#">Terms of Policy</a></li>
@@ -487,7 +487,7 @@
 
                         <div class="col-lg-3">
                             <div class="footer_wizet_right">
-                                <h3>Support</h3>
+                                <h3><a href="#">Support</a></h3>
                                 <ul>
                                     <li><a href="#">Cookies</a></li>
                                     <li><a href="#">Fourm</a></li>
